src/codegen/tests/snapshots/rusty__codegen__tests__multifile_codegen_tests__datatype_defined_in_external_file_no_deps_in_module.snap
---
source: src/codegen/tests/multifile_codegen_tests.rs
expression: "codegen_multi(units, crate::DebugLevel::None).join(\"\\n\")"
---
; ModuleID = 'myStruct.st'
source_filename = "myStruct.st"

%myStruct = type { i32, i16* }

@__myStruct__init = unnamed_addr constant %myStruct { i32 20, i16* null }

; ModuleID = 'prog.st'
source_filename = "prog.st"

%prog = type { i32 }

@prog_instance = global %prog zeroinitializer

define void @prog(%prog* %0) {
entry:
  %x = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  ret void
}

