src/codegen/tests/snapshots/rusty__codegen__tests__multifile_codegen_tests__datatype_initialized_in_external_file_in_module.snap
---
source: src/codegen/tests/multifile_codegen_tests.rs
expression: "codegen_multi(units, crate::DebugLevel::None).join(\"\\n\")"
---
; ModuleID = 'MyInt.st'
source_filename = "MyInt.st"

; ModuleID = 'prog.st'
source_filename = "prog.st"

%prog = type { i16 }

@prog_instance = global %prog { i16 5 }

define void @prog(%prog* %0) {
entry:
  %x = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  ret void
}

