src/codegen/tests/snapshots/rusty__codegen__tests__multifile_codegen_tests__enum_referenced_in_fb_nested.snap
---
source: src/codegen/tests/multifile_codegen_tests.rs
expression: "codegen_multi(units, crate::DebugLevel::None).join(\"\\n\")"
snapshot_kind: text
---
; ModuleID = 'myEnum.st'
source_filename = "myEnum.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

@myEnum.a = unnamed_addr constant i32 1
@myEnum.b = unnamed_addr constant i32 2
@myEnum.c = unnamed_addr constant i32 3

; ModuleID = 'fb.st'
source_filename = "fb.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb = type { i32 }

@__fb__init = unnamed_addr constant %fb { i32 1 }

define void @fb(%fb* %0) {
entry:
  %this = alloca %fb*, align [filtered]
  store %fb* %0, %fb** %this, align [filtered]
  %x = getelementptr inbounds %fb, %fb* %0, i32 0, i32 0
  ret void
}

; ModuleID = 'myStruct.st'
source_filename = "myStruct.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myStruct = type { %fb.2 }
%fb.2 = type { i32 }

@__myStruct__init = unnamed_addr constant %myStruct { %fb.2 { i32 1 } }
@__fb__init = external unnamed_addr constant %fb.2

declare void @fb(%fb.2*)

; ModuleID = 'fb2.st'
source_filename = "fb2.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb2 = type { %myStruct.4 }
%myStruct.4 = type { %fb.5 }
%fb.5 = type { i32 }

@__fb2__init = unnamed_addr constant %fb2 { %myStruct.4 { %fb.5 { i32 1 } } }
@__myStruct__init = external unnamed_addr constant %myStruct.4
@__fb__init = external unnamed_addr constant %fb.5

define void @fb2(%fb2* %0) {
entry:
  %this = alloca %fb2*, align [filtered]
  store %fb2* %0, %fb2** %this, align [filtered]
  %x = getelementptr inbounds %fb2, %fb2* %0, i32 0, i32 0
  ret void
}

declare void @fb(%fb.5*)

; ModuleID = 'fb3.st'
source_filename = "fb3.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%fb3 = type {}

@__fb3__init = unnamed_addr constant %fb3 zeroinitializer

define void @fb3(%fb3* %0) {
entry:
  %this = alloca %fb3*, align [filtered]
  store %fb3* %0, %fb3** %this, align [filtered]
  ret void
}
