src/codegen/tests/snapshots/rusty__codegen__tests__multifile_codegen_tests__global_value_from_different_file.snap
---
source: src/codegen/tests/multifile_codegen_tests.rs
expression: "codegen_multi(units, crate::DebugLevel::None).join(\"\\n\")"
---
; ModuleID = 'g1.st'
source_filename = "g1.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

@x = global i32 6
@d = external unnamed_addr constant i32
@y = global i32 7
@e = external unnamed_addr constant i32

; ModuleID = 'g2.st'
source_filename = "g2.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

@c = unnamed_addr constant i32 5
@d = unnamed_addr constant i32 6
@e = unnamed_addr constant i32 7

; ModuleID = 'prog.st'
source_filename = "prog.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prog = type {}

@prog_instance = global %prog zeroinitializer
@c = external unnamed_addr constant i32
@x = external global i32

define void @prog(%prog* %0) {
entry:
  store i32 7, i32* @x, align [filtered]
  ret void
}
